microservices/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nava
  labels:
    app: nava
    environment: production
